[package]
name = "deployment-tracker"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.7"
chrono = "0.4"
futures = "0.3"
reqwest = { version = "0.11", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "1.0", features = ["full"] }
thiserror = "1.0"
serde_json = "1.0.138"
tracing-subscriber = "0.3.19                                                                                 "
log = "0.4.25"